<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources>
    <string name="app_name">PDF Viewer</string>
    <string name="find_in_page">Find in page</string>
    <string name="share">Share</string>
    <string name="open_with">Open with…</string>
    <string name="download">Download</string>
    <string name="pdf_document">PDF Document</string>
    <string name="print">Print</string>

    <!-- Download results -->
    <string name="download_successful">Download successful</string>
    <string name="download_error">Error while downloading the file</string>
</resources>
